# civlike

./: .gitignore  CMakeLists.txt  GNUmakefile  README.md  TODO.md  build.sh  check_rules.sh  civlike.lua  main.cc  sample_rules.lua
.old/civlike/: civlike.hh  game.hh
.old/civlike/lua/: luaobject.cc  luavalue.cc  luavalue.hh  types.hh
.old/ui/: uiproto.cc
.old/uiproto/: main.lua
civlike/: civlike.cc  civlike.ccm  civlike.hh  civlike.tl  game.cc  game.hh  game.tl  luavalue.cc  luavalue.hh  rules.cc  rules.hh  rules.tl  tests.cc
civlike/collections/: countermap.hh  id.hh  idmap.hh  idrefmap.hh
civlike/command/: city.cc  command.hh  focus.cc  new_game.cc  round.cc  unit_actions.cc
civlike/common/: color.ccm  color.hh  geometry.ccm  geometry.hh
civlike/game/: city.hh  direction.ccm  direction.hh  game.cc  game.ccm  game.hh  moveunit.cc  roundfocus.cc  unit.ccm  unit.hh  visualcue.ccm  visualcue.hh
civlike/game/impl/: city.cc  game.cc  roundfocus.cc  unitactions.cc
civlike/lua/: luaobject.hh  luatable.hh  luavalue.cc  luavalue.hh  types.hh
civlike/rules/: colonization.ccm  fnval.ccm  fnval.hh  id.ccm  id.hh  ruleset.ccm  ruleset.hh
common/: color.ccm  geometry.ccm  geometry.cppm
doc/: engine.uml.txt
hello/: hello.ccm
ruleset/: colonization.ccm  id.ccm  ruleset.ccm  ruleset.cppm
ui/: uiproto.cc
uiproto/: civlike.lua  main.cc  main.lua  resources.cc  resources.hh  sample_rules.lua  text.cc  text.ccm  text.hh  ui.cc  ui.ccm  ui.hh  ui_draw.cc  uicity.cc  uicity.hh  uiproto.ccm
uiproto/.old/: sdl.hh  ui.cc  ui_draw.cc  uicity.cc
uiproto/screen/: citymanagement.cc  citymanagement.hh  mainmap.cc  mainmap.hh  screen.cc  screen.hh
variants/: colonization.hh
